[tool.poetry]
name = "dialogy"
version = "0.5.5"
description = "Language understanding for human dialog."
authors = ["Amresh Venugopal <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
coloredlogs = "^15.0"
attrs = "^20.3.0"
requests = "^2.25.1"
pytz = "^2020.4"
python-dateutil = "^2.8.1"
watchdog = "^1.0.2"
docopt = "^0.6.2"
copier = "^5.1.0"
pydash = "^4.9.3"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "^2.10.1"
mypy = "^0.790"
httpretty = "^1.0.3"
black = "^20.8b1"
rope = "^0.18.0"
bandit = "^1.7.0"
pylint = "^2.6.0"
pycco = "^0.6.0"
watchdog = "^1.0.2"
isort = "^5.7.0"
sphinx = "^3.5.3"
furo = "^2021.4.11-beta.34"
sphinx-copybutton = "^0.3.1"
ipython = "^7.22.0"
pycln = "^0.0.1"

[tool.poetry.scripts]
dialogy = "dialogy.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
