[tool.poetry]
name = "dialogy"
version = "2.2.2"
description = "Dialogy is a library for building and managing SLU applications."
authors = ["Amresh Venugopal <amresh.venugopal@gmail.com>", "Daksh Varshneya <dakshvar22@gmail.com"]
license = "MIT"
repository = "https://github.com/skit-ai/dialogy"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
attrs = "21.3.0"
requests = "^2.25.1"
pytz = "^2020.4"
python-dateutil = "^2.8.1"
pydash = "^6.0.0"
numpy = "^1.20.2"
scipy = "^1.7.1"
loguru = "^0.5.3"
pandas = "^1.3.2"
scikit-learn = "^1.2.0"
tqdm = "^4.62.2"
jiwer = "^2.2.0"
stanza = "^1.3.0"
thefuzz = "^0.19.0"
xgboost = "^1.5.2"
copier = "^7.1.0"
MarkupSafe = "2.1.1"
matplotlib = "^3.5.1"
types-pytz = "^2021.3.5"
types-requests = "^2.27.11"
types-setuptools = "^57.4.10"
black = ">22.8.0"
googlemaps = "^4.6.0"
torch = "1.13.1"
pydantic = "^1.10.2"
aiohttp = "^3.8.4"
nest-asyncio = "^1.5.6"
transformers = "4.38.0"
word2number = "^1.1"
pyyaml-include = "1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^2.10.1"
copier = "^7.1.0"
mypy = "^0.982"
httpretty = "^1.0.3"
rope = "^0.18.0"
bandit = "^1.7.0"
pylint = "^2.6.0"
watchdog = "^1.0.2"
isort = "^5.7.0"
furo = "^2021.4.11-beta.34"
toml = "^0.10.2"
Sphinx = "4.4.0"
sphinx-copybutton = "^0.3.1"
sphinx-autodoc-typehints = "^1.16.0"
sphinxcontrib-mermaid = "^0.7.1"
pytest-mock = "^3.7.0"
spacy = "^3.3.1"
ipykernel = "^6.15.0"
types-PyYAML = "6.0.12.9"

[tool.poetry.scripts]
dialogy = "dialogy.cli:main"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
